--- a/playbook_example.yml
+++ b/playbook_example.yml
@@ -4,7 +4,8 @@
 - name: Install Modsecurity
   hosts: modsec
   remote_user: centos
-  sudo: yes
+  become: yes
+  become_method: sudo
 
   roles:
     - sardpost.modsecurity
